# plenary_pantry

./: .gitignore  EMAIL_INGESTION_GUIDE.md  MOBILE_API_GUIDE.md  PAIRED_PHOTO_GUIDE.md  README.md  RECIPE_INGESTION_README.md  manage.py  pyproject.toml  pytest.ini  pyvenv.cfg
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
plenary_pantry/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
plenary_pantry/migrations/: 0001_initial.py  0002_recipe_source_name_recipe_source_type_and_more.py
recipe_ingestion/: admin.py  apps.py  email_service.py  models.py  quick_commands.txt  services.py  test_email_ingestion.py.bak  urls.py  views.py
recipe_ingestion/migrations/: 0001_initial.py  0002_alter_ingestionsource_source_type_multiimagesource.py  0002_pairedphotosource_pairedphotojob.py  0003_ingestionsource_is_test.py  0004_alter_ingestionsource_source_type_and_more.py  0005_approvedemailsender_and_more.py  0006_emailattachment_attachment_type.py
recipe_ingestion/services/: __init__.py  ingredient_normalizer.py  ocr_service.py  recipe_ingestion_service.py  recipe_normalizer_service.py  recipe_parser_service.py  web_scraper_service.py
recipe_ingestion/tests/: conftest.py  conftest.py.bak  conftest.py.bak2  conftest.py.bak3  test_admin.py  test_core_functionality.py  test_models.py  test_ocr_processing.py  test_services.py  test_simple_coverage.py  test_views.py  test_working_admin.py  test_working_models.py  test_working_views.py
recipe_ingestion/utils/: __init__.py  constants.py  file_validators.py  response_helpers.py
(+22 files in other folders)
