[project]
name = "plenary-pantry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromedriver>=2.24.1",
    "django>=5.2.5",
    "django-extensions>=4.1",
    "nltk>=3.9.1",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "python-decouple>=3.8",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "spacy>=3.8.7",
    "tesseract>=0.1.3",
]
